--- a/The_seat/src/main/webapp/resources/css/loginform.css
+++ b/The_seat/src/main/webapp/resources/css/loginform.css
@@ -1,86 +1,116 @@
 @charset "UTF-8";
+
 body {
-        background-color: #2e8eff;
-        color: white;
-        font-size: 1rem;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        position: relative;
-    }
+       background-color: #2e8eff;
+       color: white;
+       font-size: 1rem;
+       height: 100vh;
+       display: flex;
+       align-items: center;
+       font-family: 'IBM Plex Sans KR', sans-serif;
+   }
 
-    .col__section {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+   /* 버튼 기본 스타일링 */
+button {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: rgb(78, 78, 78);
+}
 
-    .line {
-        height: 1px;
-        width: 10vw;
-        background-color: white;
-        display: inline-block;
-    }
+.submit-btn {
+    box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699);
+    border-radius: 10px;
+    width:150px; 
+    height:30px;
+    background-color: transparent;
+    color: rgb(48, 48, 48);
+    background-image: linear-gradient(
+        120deg, transparent 0%, transparent 50%, #2e8eff 30%
+    );
+    background-size: 230%;
+    transition: all, 0.7s;
+}
 
-    .line-section {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 15px 0 15px 0;
-    }
+.submit-btn:hover {
+    background-position: 100%;
+    color: white;
+}
 
-    .line-section > span {
-        padding: 0 15px 0 15px;
-    }
+.col__section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-    .form-control {
-        width: 25vw;
-        height: 5vh;
-        outline: none;
-        border: none;
-        margin: 10px 0 10px 0;
-    }
+.line {
+    height: 1px;
+    width: 10vw;
+    background-color: white;
+    display: inline-block;
+}
 
-    .text-btn {
-        outline: none;
-        border: none;
-        background-color: transparent;
-        color: white;
-        margin: 15px auto 5px auto;
-        display: flex;
-        text-align: center;
-    }
+.line-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 0 15px 0;
+}
 
-    .modal {
-        color: black;
-    }
+.line-section > span {
+    padding: 0 15px 0 15px;
+}
 
-    #signupForm {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    #signupForm > div > input {
-        width: 30vw;
-        background-color: #f2f2f2;
-        outline: none;
-        border: 0.5px solid lightgray;
-    }
-    .signup__menu {
-        display: flex;
-        align-items: center;
-    }
+.form-control {
+    width: 25vw;
+    height: 5vh;
+    outline: none;
+    border: none;
+    margin: 10px 0 10px 0;
+}
 
-    .signup__menu-add {
-        width: 5vw; 
-        height: 5vh; 
-        padding: 0;
-        margin: 10px 0 10px 5px;
-        outline: none;
-        border: none;
-        background-color: white;
-        color: #2e8eff;
-    }
+.text-btn {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: white;
+    margin: 15px auto 5px auto;
+    display: flex;
+    text-align: center;
+}
+
+.modal {
+    color: black;
+}
+
+#signupForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#signupForm > div > input {
+    background-color: #f2f2f2;
+    outline: none;
+    border: 0.5px solid lightgray;
+    max-width: 350px;
+    min-width: 350px;
+}
+
+.signup__menu {
+    display: flex;
+    align-items: center;
+}
+
+.signup__menu-add {
+    width: 5vw; 
+    height: 5vh; 
+    padding: 0;
+    margin: 10px 0 10px 5px;
+    outline: none;
+    border: none;
+    background-color: white;
+    color: #2e8eff;
+}
