--- a/The_seat/src/main/webapp/resources/css/storeOrder2.css
+++ b/The_seat/src/main/webapp/resources/css/storeOrder2.css
@@ -70,57 +70,25 @@ ul {
     box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699);
 }
 
-.store__order-user {
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-start;
-    width: 100%;
-}
-
-.store__order-user > h5, h6 {
-    font-weight: 600;
-}
-
-.store__order-user > h5 {
-    color: #598eff;
-}
-
 .white-box {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: center;
-    margin-top: 10px;
+    align-items: center;
+    padding: 20px;
 }
 
 .order,
 .reserve {
-    background-color: white;
-    width: 55%;
-    height: 400px;
-    padding: 15px;
+    height: 100%;
 }
 
-.box-title{
-    margin: 5px 0;
-    margin-bottom: 15px;
-}
-
-.reserve {
-    width: 40%;
-}
-
-.line {
-    height: 1.5px;
-    background-color: gray;
-    width: 100%;
-    margin-bottom: 5px;
-}
 
 .dot {
     border: 1px dashed gray;
-    margin-bottom: 5px;
+    margin: 15px 0;
 }
 
 .myStore_container-gray {
@@ -144,50 +112,41 @@ ul {
     align-items: center; 
     flex-direction: column;
     height: 100%;
-    margin-top: 30px;
-}
-
-.order-list__body {
     text-overflow: hidden; 
     overflow-x: auto;
-    height: 450px;
 }
 
 .order__list {
     width: 100%;
-    height: 250px;
     text-overflow: hidden; 
     overflow-x: auto;
 }
 
 .list-item {
-    padding: 10px 0;
+    text-align: start;
     font-size: 14px;
+    padding-bottom: 5px;
 }
 
 .order__total {
     font-weight: 500;
 }
 
-.down-icon{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    height: 50%;
-}
-
 .reserve-body {
-    margin-top: 30px;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 70%;
-    align-items: flex-start; 
+    align-items: flex-start;
 }
 
 .reserve-info {
-    padding: 10px;
     font-size: 14px;
+    padding: 10px 0;
+}
+
+.reserve-info > span {
+    color: gray;
 }
 
 .reserve-info > strong {
