--- a/The_seat/src/main/webapp/resources/css/manageMenu.css
+++ b/The_seat/src/main/webapp/resources/css/manageMenu.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
-    align-items: center;
+    flex-direction:column;
     justify-content: center;
     color: rgb(78, 78, 78);
 }
@@ -45,18 +45,17 @@ ul {
     margin-bottom: 10px;
 }
 
-.menu__article {
+.menu__list {
+    margin-top: 60px;
+}
+
+.menu_container {
     display: flex;
     justify-content: center;
     background-color: white;
-    border-radius: 10px  0 0 10px;
+    border-radius: 10px;
     height: 80%;
-    width: 50%;
-    position: relative;
-}
-
-.menu__list {
-    margin-top: 60px;
+    max-width: 900px;
 }
 
 .menu__category {
@@ -64,11 +63,24 @@ ul {
     align-items: center;
     justify-content: space-between;
     margin-left: 20px;
-    width: 40%; 
     background-color: white; 
     z-index: 999; 
     position: fixed;
 }
+
+
+.inner_container {
+    /* text-overflow: hidden; 
+   overflow-x: auto; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+    
 
 .menu__category  a {
     margin-left: 15px;
@@ -101,19 +113,17 @@ img {
     box-shadow: 4px 6px 11px rgba(172, 172, 172, 0.699);
 }
 
-.store__aside {
+.aside {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-evenly;
     height: 100%;
-    position: absolute;
     left: 100%;
     padding: 0;
-    
 }
-
-.store__aside > button {
+    
+.aside > button {
     border: 1px solid lightgray;
     border-bottom: none;
     background-color: white;
@@ -128,23 +138,38 @@ img {
     transition: color 0.2s ease-in-out;
 }
 
-.store__aside > button:first-child {
-    border: 1px solid gray;
-    background-color: white;
-    border-radius: 0 5px 5px 0;
-    border: 1px solid lightgray;
-    width: 15vw;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-weight: 700;
-    transition: color 0.2s ease-in-out;
+.aside > button:first-child {
+    border-top: none;
 }
 
-
-.store__aside button:focus {
+.aside button:nth-child(2) {
     color: #598eff;
     border-left: none;
+}
+    
+.menu__category {
+	 display: flex;
+	 align-items: center;
+	 justify-content: space-between;
+	 background-color: white; 
+	 z-index: 999; 
+	 position: absolute;
+	 top:0;
+	 width: 60%;
+}
+
+.menu__category  a {
+    margin-left: 15px;
+        text-decoration: none;
+    color: rgb(78, 78, 78);
+}
+
+.menu__category  a:focus, a:hover {
+	padding-bottom: 5px;
+	border-bottom: 3px solid #598eff;
+	color: rgb(78, 78, 78);
+}
+
+#categories {
+    display: flex;
 }
