--- a/The_seat/src/main/webapp/resources/css/myStore.css
+++ b/The_seat/src/main/webapp/resources/css/myStore.css
@@ -10,6 +10,7 @@ body {
     width: 100vw;
     display: flex;
     align-items: center;
+    flex-direction:column;
     justify-content: center;
     color: rgb(78, 78, 78);
     font-size: 16px;
@@ -42,50 +43,51 @@ img {
 }
 
 input {
-	padding-left:10px;
-	border:none;
-	border-bottom: 1px solid lightgray;
-	text-align:center;
+    padding-left:10px;
+    border:none;
+    border-bottom: 1px solid lightgray;
+    text-align:center;
 }
 
 input:focus {
-	outline:none;
+    outline:none;
 }
 
 .myStore_container {
     display: flex;
     justify-content: center;
     background-color: white;
-    border-radius: 10px  0 0 10px;
+    border-radius: 10px;
     height: 80%;
-    max-width: 700px;
-    position: relative;
+    max-width: 900px;
 }
 
 .inner_container {
-    text-overflow: hidden; 
-    overflow-x: auto;
+    /* text-overflow: hidden; 
+    overflow-x: auto; */
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-.store__aside {
+.aside {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-evenly;
     height: 100%;
-    position: absolute;
     left: 100%;
     padding: 0;
-    
 }
 
-.store__aside > button {
+.aside > button {
     border: 1px solid lightgray;
     border-bottom: none;
     background-color: white;
@@ -100,12 +102,11 @@ input:focus {
     transition: color 0.2s ease-in-out;
 }
 
-.store__aside > button:first-child {
-	border-top: none;
+.aside > button:first-child {
+    border-top: none;
 }
 
-
-.store__aside button:focus {
+.aside button:focus {
     color: #598eff;
     border-left: none;
 }
@@ -119,6 +120,6 @@ input:focus {
 }
 
 .allTag {
-	color: white;
-	font-size:14px;
+    color: white;
+    font-size:14px;
 }
