--- a/The_seat/src/main/webapp/resources/css/storeOrder2.css
+++ b/The_seat/src/main/webapp/resources/css/storeOrder2.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    margin:0;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: rgb(78, 78, 78);
@@ -44,6 +46,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding-bottom: 10px;
 }
 
 .store__order-header > h4 {
@@ -59,48 +62,14 @@ ul {
     font-size: 14px;
 }
 
-.search-btn {
-    background-color: #598eff;
-    color: white;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
-    font-size: 16px;
-    margin-left: 5px;
-    box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699);
-}
-
-.white-box {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.order,
-.reserve {
-    height: 100%;
-}
-
-
-.dot {
-    border: 1px dashed gray;
-    margin: 15px 0;
-}
-
-.myStore_container-gray {
+.myStore_container {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     background-color: #ECECEC;
-    border-radius: 10px  0 0 10px;
-    height: 600px;
-    max-width: 700px;
-    position: relative;
-    padding: 30px;
+    border-radius: 10px;
+    height: 550px;
+    width: 900px;
 }
 
 ::-webkit-scrollbar {
@@ -122,12 +91,6 @@ ul {
     overflow-x: auto;
 }
 
-.list-item {
-    text-align: start;
-    font-size: 14px;
-    padding-bottom: 5px;
-}
-
 .order__total {
     font-weight: 500;
 }
@@ -138,19 +101,6 @@ ul {
     width: 100%;
     height: 70%;
     align-items: flex-start;
-}
-
-.reserve-info {
-    font-size: 14px;
-    padding: 10px 0;
-}
-
-.reserve-info > span {
-    color: gray;
-}
-
-.reserve-info > strong {
-    margin-left: 30px;
 }
 
 .reserve-btn {
@@ -168,7 +118,6 @@ ul {
     align-items: stretch;
     justify-content: space-evenly;
     height: 100%;
-    position: absolute;
     left: 100%;
     padding: 0;
 }
@@ -188,11 +137,91 @@ ul {
     transition: color 0.2s ease-in-out;
 }
 
-.store__aside button:focus {
+.store__aside button:nth-child(4) {
+    background-color: #ECECEC;
     color: #598eff;
     border-left: none;
 }
 
-.store__aside button:nth-child(4) {
-    background-color: #ECECEC;
+.search-btn {
+    background-color: #598eff;
+    color: white;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    font-size: 16px;
+    margin-left: 5px;
+    box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699);
+}
+
+.store__order-user {
+    width: 100%;
+    margin: 5px 0;
+}
+
+.store__order-user > h5, h6 {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.store__order-user > h5 {
+    color: #598eff;
+    margin-bottom: 10px;
+}
+
+.white-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.order,
+.reserve {
+    background-color: white;
+    width: 50%;
+    padding: 15px;
+}
+
+.reserve {
+    width: 250px;
+}
+
+.box-title {
+    margin: 5px 0;
+    margin-bottom: 15px;
+}
+
+.line {
+    height: 1.5px;
+    background-color: gray;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.dot {
+    border: 1px dashed gray;
+    margin-bottom: 5px;
+}
+
+.order-list__body {
+    text-overflow: hidden; 
+    overflow-x: auto;
+    height: 450px;
+}
+
+.list-item {
+    text-align: start;
+    padding: 10px 0;
+    font-size: 14px;
+}
+
+.reserve-info {
+    padding: 10px;
+    font-size: 14px;
+}
+
+.reserve-info > strong {
+    margin-left: 30px;
 }
