--- a/The_seat/src/main/webapp/resources/css/manageMenu.css
+++ b/The_seat/src/main/webapp/resources/css/manageMenu.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
-* {
+
+    * {
      box-sizing: border-box;
+     margin: 0;
  }
  
 body {
@@ -58,8 +60,8 @@ input:focus {
     justify-content: center;
     background-color: white;
     border-radius: 10px;
-    height: 80%;
-    max-width: 900px;
+    height: 550px;
+    width: 900px;
 }
 
 .menu__list {
@@ -94,13 +96,13 @@ input:focus {
 
 
 .inner_container {
-    height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     position: relative;
+    width: 100%;
+    margin-left: 100px;
 }
 
 ::-webkit-scrollbar {
