--- a/The_seat/src/main/webapp/resources/css/storeOrder.css
+++ b/The_seat/src/main/webapp/resources/css/storeOrder.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    margin:0;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
     color: rgb(78, 78, 78);
@@ -71,18 +73,18 @@ ul {
 }
 
 .store__order-user {
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-start;
     width: 100%;
+    margin: 5px 0;
 }
 
 .store__order-user > h5, h6 {
     font-weight: 600;
+    font-size: 18px;
 }
 
 .store__order-user > h5 {
     color: #598eff;
+    margin-bottom: 10px;
 }
 
 .white-box {
@@ -91,13 +93,12 @@ ul {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    margin-top: 10px;
 }
 
 .order,
 .reserve {
     background-color: white;
-    width: 55%;
+    width: 50%;
     height: 400px;
     padding: 15px;
 }
@@ -108,7 +109,7 @@ ul {
 }
 
 .reserve {
-    width: 40%;
+    width: 250px;
 }
 
 .line {
@@ -128,11 +129,9 @@ ul {
     justify-content: center;
     flex-direction: column;
     background-color: #ECECEC;
-    border-radius: 10px  0 0 10px;
-    height: 600px;
-    max-width: 700px;
-    position: relative;
-    padding: 30px;
+    border-radius: 10px;
+    height: 550px;
+   	width: 900px;
 }
 
 ::-webkit-scrollbar {
@@ -143,8 +142,6 @@ ul {
     display: flex; 
     align-items: center; 
     flex-direction: column;
-    height: 100%;
-    margin-top: 30px;
 }
 
 .order-list__body {
@@ -203,18 +200,17 @@ ul {
     font-weight: 600;
 }
 
-.store__aside {
+.aside {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-evenly;
     height: 100%;
-    position: absolute;
     left: 100%;
     padding: 0;
 }
 
-.store__aside > button {
+.aside > button {
     border: 1px solid #ECECEC;
     background-color: white;
     border-radius: 0 5px 5px 0;
@@ -229,11 +225,9 @@ ul {
     transition: color 0.2s ease-in-out;
 }
 
-.store__aside button:focus {
+
+.aside button:nth-child(4) {
+    background-color: #ECECEC;
     color: #598eff;
     border-left: none;
-}
-
-.store__aside button:nth-child(4) {
-    background-color: #ECECEC;
 }
