--- a/The_seat/src/main/webapp/resources/css/storeReview.css
+++ b/The_seat/src/main/webapp/resources/css/storeReview.css
@@ -51,12 +51,12 @@ img {
     justify-content: center;
     background-color: white;
     border-radius: 10px;
-    height: 80%;
+    height: 550px;
+    width: 900px;
 }
 
 .inner_container {
     height: 100%;
-    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -238,7 +238,7 @@ small {
 
 .user-review__reply {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .edit-btn {
@@ -246,4 +246,75 @@ small {
     justify-content: flex-end;
     margin-top: 5px;
     font-size: 14px;
+}
+
+/* ---------------------------- */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+body {
+    background-color: #598eff;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(78, 78, 78);
+}
+
+/* 버튼 기본 스타일링 */
+button {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: rgb(78, 78, 78);
+}
+
+input:focus {
+    outline: none;
+}
+
+button:focus {
+    outline: none;
+    border: none;
+}
+
+select:focus {
+    outline: none;
+}
+
+/* 리스트 기본 스타일링 */
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.display-box {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 20px;
+    height: 90%;
+}
+
+.myStore_container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 10px;
+    height: 550px;
+   	width: 900px;
+}
+
+.inner_container {
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    height: 100%;
 }
