--- a/The_seat/src/main/webapp/resources/css/storeOrder.css
+++ b/The_seat/src/main/webapp/resources/css/storeOrder.css
@@ -7,14 +7,20 @@
 
 body {
     background-color: #598eff;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction:column;
     align-items: center;
     justify-content: center;
     color: rgb(78, 78, 78);
+    -ms-overflow-style: none;
 }
+
+::-webkit-scrollbar { display: none; } /*특정 부분 스크롤바 없애기*/ 
+.box{ -ms-overflow-style: none; } 
+.box::-webkit-scrollbar{ display:none; }
+
 
 /* 버튼 기본 스타일링 */
 button {
