--- a/The_seat/src/main/webapp/resources/css/manageMenu.css
+++ b/The_seat/src/main/webapp/resources/css/manageMenu.css
@@ -100,7 +100,7 @@ input:focus {
     justify-content: space-between;
     position: relative;
     width: 100%;
-    margin-left: 100px;
+    margin-left: 10%;
 }
 
 ::-webkit-scrollbar {
