0908머지이잉이이

--- a/The_seat/src/main/webapp/resources/css/myStore.css
+++ b/The_seat/src/main/webapp/resources/css/myStore.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
-
 * {
-    box-sizing: border-box;
-    margin:0;
+   box-sizing: border-box;
+   margin:0;
 }
 
 body {
@@ -106,6 +105,28 @@ input:focus {
     border-left: none;
 }
 
+.store-top__info {
+	display: flex; 
+	width:40%; 
+	justify-content: center; 
+	align-items: center; 
+	flex-direction: column; 
+    padding-left:10px; 
+    margin-top:10px; 
+    height:550px; 
+    text-overflow: hidden; 
+    overflow-x: auto;
+}
+
+.store-bottom__info {
+	display: flex; 
+	justify-content: center; 
+	align-items: center; 
+	flex-direction: column; 
+	margin-right:20px;
+    width:50%
+}
+
 #storeOnOffBtn {
     background-color: white;
     color: #598eff;
@@ -133,3 +154,119 @@ input:focus {
 	color: #598eff;
 	font-weight: 600;
 }
+
+img:hover {
+	opacity:0.3;
+}
+
+.tag_zone {
+	display:flex; 
+	justify-content:center; 
+	align-items:center; 
+	flex-direction:column; 
+	text-align:center;
+}
+
+.tag_input {
+	display:flex; 
+	box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699); 
+	width:150px; 
+	height:30px;
+    margin-bottom:10px; 
+    border-radius: 5px;
+}  
+          
+	
+	
+		/* 테블릿 (해상도 768px ~ 1023px)*/
+	
+	@media screen and (max-width:1024px) {
+		
+		.myStore_container {
+			height: 80%;
+			width: 95%;
+			flex-direction: column;
+			position:relative;
+		}
+	
+		.aside {
+			display:flex;
+			flex-direction: row;
+			width:100%;
+			position: absolute;
+			top: 0;
+			left:0;
+		}
+		
+		.aside > button {
+    		border-radius: 5px;
+    		font-weight: 700;
+			width: 20%;
+			height: 10vh;
+			font-size:16px;
+			border: 1px solid lightgray;
+		}
+		
+		.aside > button:first-child {
+			border: none;		
+		}
+		
+		.stroe-top__info {
+			padding-left: 0;
+			height:0;
+			margin-top:120px;
+		}
+		
+		.inner_container {
+			margin-top: 30px;
+		}
+		
+	}
+		
+			/* 모바일 가로, 세로 */
+		
+		@media screen and (max-width:820px) {
+		
+		body {
+			height: auto;
+		}
+		
+		.myStore_container {
+			height: 80%;
+			width: 100%;
+			flex-direction: column;
+			text-overflow: hidden; 
+    		overflow-x: auto;
+		}
+	
+		.aside {
+			display:none;
+		}
+		
+		.store-top__info {
+			width:100%;
+			padding-left:0;
+			height: auto;
+		}
+		
+		.store-bottom__info {
+			width: 100%;
+			margin-right:0;
+			padding-top: 30px;
+			border-top: 2px solid #f2f2f2;
+			width:90%;
+		}
+		
+		.inner_container {
+			flex-direction:column;
+			margin-top: 0;
+		}
+		
+		.navbarTwo {
+			margin-top: 30px;
+		}
+		
+		.tag_input {
+			margin-bottom: 30px;
+		}
+	}
