--- a/The_seat/src/main/webapp/resources/css/manageMenu.css
+++ b/The_seat/src/main/webapp/resources/css/manageMenu.css
@@ -100,10 +100,9 @@ input:focus {
     margin-left: 10%;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
- */
 
 .circle-btn {
 	background-color: #598eff;
@@ -249,7 +248,6 @@ input:focus {
 		height: 80%;
 		width: 95%;
 		position:relative;
-		padding-bottom: 10px;
 		font-weight:500;
 	}
 
@@ -287,7 +285,7 @@ input:focus {
 	}
 	
 	.menu__list {
-		height: 600px;
+		height: 80%;
 		margin-top:50;
 	}
 }
