--- a/The_seat/src/main/webapp/resources/css/storeSeat.css
+++ b/The_seat/src/main/webapp/resources/css/storeSeat.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 * {
     box-sizing: border-box;
 }
@@ -45,32 +46,37 @@ ul {
 
 .display-box {
     width: 100%;
-    height: 80%;
+    height: 85%;
     display: flex;
     justify-content: space-between;
     text-align: center;
     margin-top: 10px;
+	text-overflow: hidden; 
+	overflow-x: auto
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .seat,
 .select {
     background-color: white;
-    padding-right: 20px;
     height: 400px;
+    width: 50%;
 }
 
 .select {
-    width: 250px;
     padding-right: 0px;
 }
 
 .seat__box {
-    border: 1px solid lightgray;
     background-color: rgb(243, 243, 243);
     height: 60%;
-    width: 350px;
+    width: 100%;
     margin-top: 5px;
     position: relative;
+    border-radius: 3px;
 }
 
 .seat-title {
@@ -88,20 +94,27 @@ ul {
 
 .myStore_container {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-between;
+    flex-direction: row;
     background-color: white;
     border-radius: 10px;
     height: 550px;
    	width: 900px;
 }
 
+.myStore_container_inner {
+	display: flex; 
+	flex-direction: column; 
+	padding: 20px 30px; 
+	width: 100%;
+} 
+
 .inner_container {
     display: flex; 
     align-items: center; 
     flex-direction: column;
     height: 100%;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 .reserve-body {
@@ -121,14 +134,33 @@ ul {
     margin-left: 30px;
 }
 
+#updateForm {
+	width:40%;
+	height:7%;
+	margin-top:20px;
+}
+
+#content {
+	margin: 0 auto;
+	resize: none;
+	width: 100%;
+}
+
+#totalSeat {
+	width: 30%;
+	text-align: center;
+	border: none;
+	border-bottom: 3px solid lightgray; 
+	font-size: 14px;
+}
+
 .submit-btn {
     color: #598eff;
     box-shadow: 1px 1px 11px rgba(172, 172, 172, 0.699);
-    width: 50%;
-    height: 10%;
+    width: 100%;
+	height: 100%;
     border-radius: 20px;
     font-weight: 600;
-    margin-top: 10px;
 }
 
 .line {
@@ -151,7 +183,6 @@ ul {
 }
 
 .seat__select {
-    margin: 10px;
     display: flex;
     justify-content: flex-end;
 }
@@ -166,8 +197,7 @@ ul {
 
 .seat-NumState {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction:column;
 }
 
 .useState {
@@ -185,11 +215,7 @@ ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 5px;
-}
-
-.store__order-header > h4 {
-    font-weight: 700;
+    margin-top: 10px;
 }
 
 ::-webkit-scrollbar {
@@ -225,4 +251,106 @@ ul {
     background-color: white;
     color: #598eff;
     border-left: none;
+}
+
+#imageForm1 {
+		height: 90px;
+	
+}
+
+
+	/* 테블릿 */
+
+@media screen and (max-width:1024px) {
+	
+	.myStore_container {
+		height: 80%;
+		width: 95%;
+		position:relative;
+		justify-content:center;
+	}
+
+	.aside {
+		display:flex;
+		flex-direction: row;
+		width:100%;
+		position: absolute;
+		top: 0;
+		left:0;
+		height: auto;
+	}
+	
+	.aside > button {
+   		border-radius: 5px;
+   		font-weight: 700;
+		width: 20%;
+		height: 10vh;
+		border: 1px solid lightgray;
+	}
+	
+	.aside > button:last-child {
+		border: none;		
+	}
+
+	.display-box {
+		margin-top: 150px;
+	}
+	
+	#updateForm {
+		margin-bottom: 30px;
+	}
+}
+
+	/* 모바일 가로 */
+
+@media screen and (max-width:767px) {
+	
+	.myStore_container {
+		height: 80%;
+		width: 100%;
+		flex-direction: column;
+		text-overflow: hidden; 
+   		overflow-x: auto;
+	}
+	.myStore_container_inner {
+		height: 100%;
+		padding: 20px 0px;
+	}
+	
+	.display-box {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top:0;
+		height:100%;
+	}
+
+	.aside {
+		display:none;
+	}
+	
+	.inner_container {
+		flex-direction:column;
+		margin-top: 0;
+	}
+	
+	.navbarTwo {
+		margin-top: 30px;
+	}	
+	
+	.seat__box {
+		height: 40%;
+	}
+	
+	.seat {
+		flex-shrink: 0;
+	}
+	.select {
+		height: 40%;
+		width: 60%;
+	}
+	
+	#content {
+		width: 100%;
+	}
 }
